--- a/content/pages/projects/x86-64.md
+++ b/content/pages/projects/x86-64.md
@@ -287,20 +287,168 @@ In the assembly syntax accepted by gcc, register names are always prefixed with 
 
 The register file is as follows:
 
-| REGISTER | PURPOSE | SAVED ACROSS CALLS |
-| --- | --- | --- |
-| %rax | temp register; return value | No |
-| %rbx | callee-saved | Yes |
-| %rcx | used to pass 4th argument to functions | No |
-| %rdx | used to pass 3rd argument to functions | No |
-| %rsp | stack pointer | Yes |
-| %rbp | callee-saved; base pointer | Yes |
-| %rsi | used to pass 2nd argument to functions | No |
-| %rdi | used to pass 1st argument to functions | No |
-| %r8 | used to pass 5th argument to functions | No |
-| %r9 | used to pass 6th argument to functions | No |
-| %r10-r11 | temporary | No |
-| %r12-r15 | callee-saved registers | Yes 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+REGISTER
+{{< thclose >}}
+{{< thopen >}}
+PURPOSE
+{{< thclose >}}
+{{< thopen >}}
+SAVED ACROSS CALLS
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rax
+{{< tdclose >}}
+{{< tdopen >}}
+temp register; return value
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rbx
+{{< tdclose >}}
+{{< tdopen >}}
+callee-saved
+{{< tdclose >}}
+{{< tdopen >}}
+Yes
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rcx
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 4th argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rdx
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 3rd argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rsp
+{{< tdclose >}}
+{{< tdopen >}}
+stack pointer
+{{< tdclose >}}
+{{< tdopen >}}
+Yes
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rbp
+{{< tdclose >}}
+{{< tdopen >}}
+callee-saved; base pointer
+{{< tdclose >}}
+{{< tdopen >}}
+Yes
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rsi
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 2nd argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%rdi
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 1st argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%r8
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 5th argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%r9
+{{< tdclose >}}
+{{< tdopen >}}
+used to pass 6th argument to functions
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%r10-r11
+{{< tdclose >}}
+{{< tdopen >}}
+temporary
+{{< tdclose >}}
+{{< tdopen >}}
+No
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+%r12-r15
+{{< tdclose >}}
+{{< tdopen >}}
+callee-saved registers
+{{< tdclose >}}
+{{< tdopen >}}
+Yes
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 For the code generation phase of the project you will not be performing register allocation. You should use %r10 and %r11 for temporary values that you load from the stack.
 
@@ -317,48 +465,328 @@ Immediate operands are always prefixed by $. Un-prefixed operands are treated as
 
 For instructions which modify one of their operands, the operand which is modified appears second. This differs from the convention used by Microsoft's and Borland's assemblers, which are commonly used on DOS and Windows.
 
-| OPCODE | DESCRIPTION |
-| --- | --- |
-| {{< td-colspan 2 >}}**Copying values**{{< /td-colspan >}} ||
-| mov src, dest | Copies a value from a register, immediate value or memory address to a register or memory address. |
-| cmove %src, %dest | Copies from register %src to register %dest if the last comparison operation had the corresponding result (cmove: equality, cmovne: inequality, cmovg: greater, cmovl: less, cmovge: greater or equal, cmovle: less or equal). |
-| cmovne %src, %dest |
-| cmovg %src, %dest |
-| cmovl %src, %dest |
-| cmovge %src, %dest |
-| cmovle %src, %dest |
-| {{< td-colspan 2 >}}**Stack management**{{< /td-colspan >}} ||
-| enter $x, $0 | Sets up a procedure's stack frame by first pushing the current value of %rbp on to the stack, storing the current value of %rsp in %rbp, and finally decreasing %rsp to make room for x byte-sized local variables. |
-| leave | Removes local variables from the stack frame by restoring the old values of %rsp and %rbp. |
-| push src | Decreases %rsp and places src at the new memory location pointed to by %rsp. Here, src can be a register, immediate value or memory address. |
-| pop dest | Copies the value stored at the location pointed to by %rsp to dest and increases %rsp. Here, dest can be a register or memory location. |
-| {{< td-colspan 2 >}}**Control flow**{{< /td-colspan >}} ||
-| call target | Jump unconditionally to target and push return value (current PC + 1) onto stack. |
-| ret | Pop the return address off the stack and jump unconditionally to this address. |
-| jmp target | Jump unconditionally to target, which is specified as a memory location (for example, a label). |
-| je target | Jump to target if the last comparison had the corresponding result (je: equality; jne: inequality). |
-| jne target |
-| {{< td-colspan 2 >}}**Arithmetic and logic**{{< /td-colspan >}} ||
-| add src, dest | Add src to dest. |
-| sub src, dest | Subtract src from dest. |
-| imul src, dest | Multiply dest by src. |
-| idiv divisor | Divide rdx:rax by divisor. Store quotient in rax and store remainder in rdx. |
-| shr reg | Shift reg to the left or right by value in cl (low 8 bits of rcx). |
-| shl reg |
-| ror src, dest | Rotate dest to the left or right by src bits. |
-| cmp src, dest | Set flags corresponding to whether dest is less than, equal to, or greater than src 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+OPCODE
+{{< thclose >}}
+{{< thopen >}}
+DESCRIPTION
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen colspan="2" >}}
+**Copying values**
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+mov src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Copies a value from a register, immediate value or memory address to a register or memory address.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmove %src, %dest
+{{< tdclose >}}
+{{< tdopen >}}
+Copies from register %src to register %dest if the last comparison operation had the corresponding result (cmove: equality, cmovne: inequality, cmovg: greater, cmovl: less, cmovge: greater or equal, cmovle: less or equal).
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmovne %src, %dest
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmovg %src, %dest
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmovl %src, %dest
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmovge %src, %dest
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmovle %src, %dest
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen colspan="2" >}}
+**Stack management**
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+enter $x, $0
+{{< tdclose >}}
+{{< tdopen >}}
+Sets up a procedure's stack frame by first pushing the current value of %rbp on to the stack, storing the current value of %rsp in %rbp, and finally decreasing %rsp to make room for x byte-sized local variables.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+leave
+{{< tdclose >}}
+{{< tdopen >}}
+Removes local variables from the stack frame by restoring the old values of %rsp and %rbp.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+push src
+{{< tdclose >}}
+{{< tdopen >}}
+Decreases %rsp and places src at the new memory location pointed to by %rsp. Here, src can be a register, immediate value or memory address.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+pop dest
+{{< tdclose >}}
+{{< tdopen >}}
+Copies the value stored at the location pointed to by %rsp to dest and increases %rsp. Here, dest can be a register or memory location.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen colspan="2" >}}
+**Control flow**
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+call target
+{{< tdclose >}}
+{{< tdopen >}}
+Jump unconditionally to target and push return value (current PC + 1) onto stack.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+ret
+{{< tdclose >}}
+{{< tdopen >}}
+Pop the return address off the stack and jump unconditionally to this address.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+jmp target
+{{< tdclose >}}
+{{< tdopen >}}
+Jump unconditionally to target, which is specified as a memory location (for example, a label).
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+je target
+{{< tdclose >}}
+{{< tdopen >}}
+Jump to target if the last comparison had the corresponding result (je: equality; jne: inequality).
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+jne target
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen colspan="2" >}}
+**Arithmetic and logic**
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+add src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Add src to dest.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+sub src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Subtract src from dest.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+imul src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Multiply dest by src.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+idiv divisor
+{{< tdclose >}}
+{{< tdopen >}}
+Divide rdx:rax by divisor. Store quotient in rax and store remainder in rdx.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+shr reg
+{{< tdclose >}}
+{{< tdopen >}}
+Shift reg to the left or right by value in cl (low 8 bits of rcx).
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+shl reg
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+ror src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Rotate dest to the left or right by src bits.
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+cmp src, dest
+{{< tdclose >}}
+{{< tdopen >}}
+Set flags corresponding to whether dest is less than, equal to, or greater than src
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 {{< anchor "Stack_Organization" >}}{{< /anchor >}}Stack Organization
 --------------------------------------------------------------------
 
 Global and local variables are stored on the stack, a region of memory that is typically addressed by offsets from the registers %rbp and %rsp. Each procedure call results in the creation of a _stack frame_ where the procedure can store local variables and temporary intermediate values for that invocation. The stack is organized as follows:
 
-| POSITION | CONTENTS | FRAME |
-| --- | --- | --- |
-|  {{< br >}}{{< br >}} 8n+16(%rbp) {{< br >}}{{< br >}} ... {{< br >}}{{< br >}} 16(%rbp) {{< br >}}{{< br >}}  |  {{< br >}}{{< br >}} argument n {{< br >}}{{< br >}} ... {{< br >}}{{< br >}} argument 7 {{< br >}}{{< br >}}  | Previous |
-|  {{< br >}}{{< br >}} 8(%rbp) {{< br >}}{{< br >}} 0(%rbp) {{< br >}}{{< br >}} \-8(%rbp) {{< br >}}{{< br >}} ... {{< br >}}{{< br >}} 0(%rsp) {{< br >}}{{< br >}}  | return address | Current |
-| previous %rbp value |
-| locals and temps 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+POSITION
+{{< thclose >}}
+{{< thopen >}}
+CONTENTS
+{{< thclose >}}
+{{< thopen >}}
+FRAME
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+8n+16(%rbp)
+
+...
+
+16(%rbp)
+
+
+{{< tdclose >}}
+{{< tdopen >}}
+
+
+argument n
+
+...
+
+argument 7
+
+
+{{< tdclose >}}
+{{< tdopen >}}
+Previous
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+8(%rbp)
+
+0(%rbp)
+
+\-8(%rbp)
+
+...
+
+0(%rsp)
+
+
+{{< tdclose >}}
+{{< tdopen >}}
+return address
+{{< tdclose >}}
+{{< tdopen >}}
+Current
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+previous %rbp value
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+locals and temps
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 {{< anchor "Calling_Convention" >}}{{< /anchor >}}Calling Convention
 --------------------------------------------------------------------
