Sync all content

--- a/content/pages/projects/x86-64.md
+++ b/content/pages/projects/x86-64.md
@@ -791,7 +791,7 @@ locals and temps
 {{< anchor "Calling_Convention" >}}{{< /anchor >}}Calling Convention
 --------------------------------------------------------------------
 
-We will use the standard Linux function calling convention. The calling convention is defined in detail in _System V Application Binary Interface—AMD64 Architecture Processor Supplement_. We will summarize the calling convention as it applies to decaf. (![This resource may not render correctly in a screen reader.](/images/inacessible.gif)[PDF](http://people.freebsd.org/~obrien/amd64-elf-abi.pdf))
+We will use the standard Linux function calling convention. The calling convention is defined in detail in _System V Application Binary Interface—AMD64 Architecture Processor Supplement_. We will summarize the calling convention as it applies to decaf. ([PDF](http://people.freebsd.org/~obrien/amd64-elf-abi.pdf))
 
 The caller uses registers to pass the first 6 arguments to the callee. Given the arguments in left-to-right order, the order of registers used is: %rdi, %rsi, %rdx, %rcx, %r8, and %r9. Any remaining arguments are passed on the stack in reverse order so that they can be popped off the stack in order.
 
