--- a/content/resources/mit6_035s10_lec01.md
+++ b/content/resources/mit6_035s10_lec01.md
@@ -4,6 +4,7 @@ description: This resource contains information related to introduction to compu
   language engineering.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/8dc4035e5495150d4c45b150c9196c01_MIT6_035S10_lec01.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec01.pdf
 uid: 8dc4035e-5495-150d-4c45-b150c9196c01
