--- a/content/resources/mit6_035s10_lec02.md
+++ b/content/resources/mit6_035s10_lec02.md
@@ -4,6 +4,7 @@ description: This resource contains information related to specifying languages 
   regular expressions and context free grammars.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/c6ce16f57edc535c1d0e425095be68e9_MIT6_035S10_lec02.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec02.pdf
 uid: c6ce16f5-7edc-535c-1d0e-425095be68e9
