--- a/content/resources/mit6_035s10_lec03.md
+++ b/content/resources/mit6_035s10_lec03.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to shift reduce parsing.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/5e52815ef894b1842e678e6eb5c0a7b9_MIT6_035S10_lec03.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec03.pdf
 uid: 5e52815e-f894-b184-2e67-8e6eb5c0a7b9
