--- a/content/resources/mit6_035s10_lec04.md
+++ b/content/resources/mit6_035s10_lec04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to top down parsing.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/94e807f043d66b1429301fa20e1ba234_MIT6_035S10_lec04.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec04.pdf
 uid: 94e807f0-43d6-6b14-2930-1fa20e1ba234
