--- a/content/resources/mit6_035s10_lec06.md
+++ b/content/resources/mit6_035s10_lec06.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to semantic analysis.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/275980aad79ddb35c3872f07019d3278_MIT6_035S10_lec06.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec06.pdf
 uid: 275980aa-d79d-db35-c387-2f07019d3278
