--- a/content/resources/mit6_035s10_lec07.md
+++ b/content/resources/mit6_035s10_lec07.md
@@ -4,6 +4,7 @@ description: This resource contains information related to machine language, mem
   layout, procedure abstraction and procedure linkage.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/7abb873e5a7174b94cb6370864d0b698_MIT6_035S10_lec07.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec07.pdf
 uid: 7abb873e-5a71-74b9-4cb6-370864d0b698
