--- a/content/resources/mit6_035s10_lec08.md
+++ b/content/resources/mit6_035s10_lec08.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to unoptimized code generation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/d721fd455e62d93610141e7c3f22186a_MIT6_035S10_lec08.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec08.pdf
 uid: d721fd45-5e62-d936-1014-1e7c3f22186a
