--- a/content/resources/mit6_035s10_lec09.md
+++ b/content/resources/mit6_035s10_lec09.md
@@ -4,6 +4,7 @@ description: This resource contains information related to basic blocks, common 
   elimination and copy propogation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/646551e794a46c21a5e504a4a15fe52a_MIT6_035S10_lec09.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec09.pdf
 uid: 646551e7-94a4-6c21-a5e5-04a4a15fe52a
