--- a/content/resources/mit6_035s10_lec11_12.md
+++ b/content/resources/mit6_035s10_lec11_12.md
@@ -4,6 +4,7 @@ description: This resource contains information related to foundations of datafl
   analysis.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/33e32fb76d8c4189826ae843a4602ca3_MIT6_035S10_lec11_12.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec11_12.pdf
 uid: 33e32fb7-6d8c-4189-826a-e843a4602ca3
