--- a/content/resources/mit6_035s10_lec13.md
+++ b/content/resources/mit6_035s10_lec13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to code optimization.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/57e66cfc08c1211c4220eb322768f338_MIT6_035S10_lec13.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec13.pdf
 uid: 57e66cfc-08c1-211c-4220-eb322768f338
