--- a/content/resources/mit6_035s10_lec14.md
+++ b/content/resources/mit6_035s10_lec14.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to loop optimizations.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/bbb58e097b8692298fcd4bfce4622b11_MIT6_035S10_lec14.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec14.pdf
 uid: bbb58e09-7b86-9229-8fcd-4bfce4622b11
