--- a/content/resources/mit6_035s10_lec15.md
+++ b/content/resources/mit6_035s10_lec15.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to more loop optimizations.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/4bbcb8256a8065813db6a876da096352_MIT6_035S10_lec15.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec15.pdf
 uid: 4bbcb825-6a80-6581-3db6-a876da096352
