--- a/content/resources/mit6_035s10_lec16.md
+++ b/content/resources/mit6_035s10_lec16.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to register allocation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/38a8bce4308db593bfa27e9cbdf82308_MIT6_035S10_lec16.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec16.pdf
 uid: 38a8bce4-308d-b593-bfa2-7e9cbdf82308
