--- a/content/resources/mit6_035s10_lec18.md
+++ b/content/resources/mit6_035s10_lec18.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to memory optimizations.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/30e968e7054ce5538e8515126a61967e_MIT6_035S10_lec18.pdf
 file_type: application/pdf
+parent_uid: 42921819-1731-ab9f-1387-c082c0b66eb6
 resourcetype: Document
 title: MIT6_035S10_lec18.pdf
 uid: 30e968e7-054c-e553-8e85-15126a61967e
