--- a/content/resources/mit6_035s10_proj01.md
+++ b/content/resources/mit6_035s10_proj01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to scanner parser project.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/588e86d6822c38812e660fda322a18d4_MIT6_035S10_proj01.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_proj01.pdf
 uid: 588e86d6-822c-3881-2e66-0fda322a18d4
