--- a/content/resources/mit6_035s10_proj02.md
+++ b/content/resources/mit6_035s10_proj02.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains semantic analysis project.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/bfb4ef2135e8ca3b6fb5b523f43c974d_MIT6_035S10_proj02.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_proj02.pdf
 uid: bfb4ef21-35e8-ca3b-6fb5-b523f43c974d
