--- a/content/resources/mit6_035s10_proj03.md
+++ b/content/resources/mit6_035s10_proj03.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains code generation project.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/66128c7973fb8bc304fb2fb70669b500_MIT6_035S10_proj03.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_proj03.pdf
 uid: 66128c79-73fb-8bc3-04fb-2fb70669b500
