--- a/content/resources/mit6_035s10_quiz01.md
+++ b/content/resources/mit6_035s10_quiz01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains practice quiz.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/1f4a25b1b92e47b9233add2bea19c8e2_MIT6_035S10_quiz01.pdf
 file_type: application/pdf
+parent_uid: 08540224-2f70-f808-844b-0d1bd0e9309d
 resourcetype: Document
 title: MIT6_035S10_quiz01.pdf
 uid: 1f4a25b1-b92e-47b9-233a-dd2bea19c8e2
