--- a/content/resources/mit6_035s10_quiz02.md
+++ b/content/resources/mit6_035s10_quiz02.md
@@ -4,6 +4,7 @@ description: This resource contains problem statements related to constant propo
   copy propogation, dead code elimination.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/dc3257dfb73b9c4ada6f21b6ccb40c85_MIT6_035S10_quiz02.pdf
 file_type: application/pdf
+parent_uid: 08540224-2f70-f808-844b-0d1bd0e9309d
 resourcetype: Document
 title: MIT6_035S10_quiz02.pdf
 uid: dc3257df-b73b-9c4a-da6f-21b6ccb40c85
