--- a/content/resources/mit6_035s10_quiz02_2006.md
+++ b/content/resources/mit6_035s10_quiz02_2006.md
@@ -4,6 +4,7 @@ description: This resource contains problem statements related to register savin
   short circuiting and basic blocks.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/76adde99717349aeedc81df448d49c65_MIT6_035S10_quiz02_2006.pdf
 file_type: application/pdf
+parent_uid: 08540224-2f70-f808-844b-0d1bd0e9309d
 resourcetype: Document
 title: MIT6_035S10_quiz02_2006.pdf
 uid: 76adde99-7173-49ae-edc8-1df448d49c65
