--- a/content/resources/mit6_035s10_rec01.md
+++ b/content/resources/mit6_035s10_rec01.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to scanner and parser.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/944fe2ca61e2ef93c8224fe2115007a8_MIT6_035S10_rec01.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_rec01.pdf
 uid: 944fe2ca-61e2-ef93-c822-4fe2115007a8
