--- a/content/resources/mit6_035s10_rec04.md
+++ b/content/resources/mit6_035s10_rec04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to dataflow optimization.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/47fad6d02ba6174468641599ecf13fb4_MIT6_035S10_rec04.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_rec04.pdf
 uid: 47fad6d0-2ba6-1744-6864-1599ecf13fb4
