--- a/content/resources/mit6_035s10_rec05.md
+++ b/content/resources/mit6_035s10_rec05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to optimizer.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-035-computer-language-engineering-spring-2010/fc322430db9af100402c6eba35ce0279_MIT6_035S10_rec05.pdf
 file_type: application/pdf
+parent_uid: ad4a9fe4-40de-d1ea-0321-e199c3f6f5b8
 resourcetype: Document
 title: MIT6_035S10_rec05.pdf
 uid: fc322430-db9a-f100-402c-6eba35ce0279
